# genetic-simulation

./: CMakeLists.txt  README.md
src/: GenomeAnalyzer.cpp  GenomeAnalyzer.h  bot.cpp  bot.h  config.h  instructions.h  main.cpp  ui.cpp  ui.h  world.cpp  world.h
